# High-Performance-K-Means

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
analyses/all_implementations/: analysis.md
analyses/gpu_and_cuda/: analysis.md
analyses/gpu_versions/: analysis.md
analyses/mpi_versions/: analysis.md
analyses/results/: resultados_cuda.csv  resultados_gpu.csv  resultados_mpi.csv  resultados_sequencial.csv
analyses/scripts/: script_cuda.sh  script_mpi.sh  script_openmp.sh  script_sequencial.sh
data/: mall_customers_for_test.csv
include/: kmeans_core.hpp  kmeans_core_cuda.hpp  kmeans_core_gpu.hpp  kmeans_core_mpi.hpp  utils.hpp
scripts/: local_test.sh
src/core/: kmeans_core.cpp  kmeans_core_cuda.cu  kmeans_core_gpu.cpp  kmeans_core_mpi.cpp  kmeans_core_parallel.cpp  utils.cpp
src/cuda/: main.cu
src/mpi_openmp/: main.cpp
src/openmp_gpu/: main.cpp
src/sequential/: main.cpp  seq-kmeans-pseudocode.txt
tests/: first_test.cpp  test_kmeans_core.cpp  test_utils.cpp
